--- a/style.css
+++ b/style.css
@@ -69,6 +69,14 @@ h1 {
     font-size: 4rem;
 }
 
+.food-home {
+    color: var(--primary-color);
+}
+
+.food-home:hover {
+    color: var(--secondary-color);
+}
+
 @media (max-width: 600px) {
     h1 {
         font-size: 3rem;
@@ -105,9 +113,27 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 2.3rem;
+    border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 1.3rem;
+}
+
 select {
     border: none;
     font-size: 2rem;
+}
+
+select:hover {
+    color: var(--primary-color);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 2.3rem;
+    border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 1.3rem;
 }
 
 option {
@@ -123,6 +149,13 @@ span {
     display: block;
 }
 
+span:hover {
+    background-color: var(--primary-color);
+    padding: 1.2rem 2.5rem;
+    border-radius: 2rem;
+    display: block;
+}
+
 button {
     border: none;
     background: none;
@@ -133,6 +166,9 @@ button {
 .mobile-menu {
     font-size: 4rem;
     display: none;
+    box-shadow: 2px 2px 2px 2px var(--shadow);
+    border: 2px solid var(--primary-color);
+    padding: 0.5rem;
 }
 
 @media (max-width: 1150px) {
@@ -169,6 +205,20 @@ button {
 #search-recipe {
     padding: 1rem 2rem;
     font-size: 1.7rem;
+}
+
+#search-recipe:hover {
+    padding: 1rem 2rem;
+    font-size: 1.7rem;
+    background-color: var(--shadow);
+    color: white;
+    border: 4px solid white;
+}
+
+#search-recipe:active {
+    padding: 1rem 2rem;
+    font-size: 1.7rem;
+    background-color: var(--shadow);
 }
 
 .recipe-search-icon {
@@ -376,6 +426,16 @@ b {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.recipe-shop:hover {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid var(--primary-color);
+    border-radius: 2rem;
+    padding: 2rem;
 }
 
 .recipe-img {
